Fixed WFI32-IoT update files generator

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 /ATSAME54-XPRO/mplab/sample_azure_iot_embedded_sdk_pnp/build/
 /ATSAME54-XPRO/mplab/sample_azure_iot_embedded_sdk_pnp/dist/
 /ATSAME54-XPRO/mplab/sample_azure_iot_embedded_sdk_pnp/.generated_files/
+/WFI32-IoT/AzureDemo_WFI32E01/firmware/AzureDemo_WFI32-IoT.X/build/
+/WFI32-IoT/AzureDemo_WFI32E01/firmware/AzureDemo_WFI32-IoT.X/dist/
+/WFI32-IoT/AzureDemo_WFI32E01/firmware/AzureDemo_WFI32-IoT.X/.generated_files/
 /WFI32-IoT/ota_bootloader/firmware/ota_bootloader_wolfcrypt.X/build/
 /WFI32-IoT/ota_bootloader/firmware/ota_bootloader_wolfcrypt.X/dist/
 /WFI32-IoT/ota_bootloader/firmware/ota_bootloader_wolfcrypt.X/.generated_files/
-
